Change artifact name to a pattern
--HG--
branch : b0.5

--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>cloudlets</artifactId>
-	<name>mosaic-cloudlets</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
