--- a/tools-miscellaneous/pom.xml
+++ b/tools-miscellaneous/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>tools-miscellaneous</artifactId>
-	<name>mosaic-tools-miscellaneous</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
