--- a/components-core/pom.xml
+++ b/components-core/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>components-core</artifactId>
-	<name>mosaic-components-core</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
