--- a/components-parent/pom.xml
+++ b/components-parent/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>eu.mosaic_cloud.components</groupId>
 	<artifactId>components-parent</artifactId>
 	<packaging>pom</packaging>
-	<name>mosaic-components-parent</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<modules>
 		<module>../components-core</module>
