--- a/components-tools/pom.xml
+++ b/components-tools/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>components-tools</artifactId>
-	<name>mosaic-components-tools</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
