--- a/drivers-core/pom.xml
+++ b/drivers-core/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>drivers-core</artifactId>
-	<name>mosaic-drivers-core</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
