--- a/drivers-parent/pom.xml
+++ b/drivers-parent/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>eu.mosaic_cloud.drivers</groupId>
 	<artifactId>drivers-parent</artifactId>
 	<packaging>pom</packaging>
-	<name>mosaic-drivers-parent</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<modules>
 		<module>../drivers-core</module>
