--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>examples-simple-cloudlets</artifactId>
-	<name>mosaic-examples-simple-cloudlets</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
