--- a/tools-exceptions/pom.xml
+++ b/tools-exceptions/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 	
 	<artifactId>tools-exceptions</artifactId>
-	<name>mosaic-tools-exceptions</name>
+	<name>mosaic-${project.artifactId}</name>
 	
 	<dependencies>
 		<dependency>
