Refactor connector factory initialization

--- a/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
+++ b/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlets/config.properties
@@ -28,4 +28,5 @@ CloudletComponent.12=channelEndpoint
 CloudletComponent.13=channelIdentifier
 CloudletComponent.14=c2e40f0b2c041bc694ace68ace08420d40f9cbc0
 
-Cloudlet.1=connectors.factory
+Cloudlet.1=connectors.factory.builder
+Cloudlet.2=connectors.factory.initializer
