--- a/examples/realtime-feeds-indexer/pom.xml
+++ b/examples/realtime-feeds-indexer/pom.xml
@@ -122,7 +122,7 @@
 						</goals>
 						<configuration>
 							<descriptorRefs>
-								<descriptorRef>cloudlet-component</descriptorRef>
+								<descriptorRef>component</descriptorRef>
 							</descriptorRefs>
 							<archive>
 								<manifest>
@@ -139,7 +139,7 @@
 	<properties>
 		<versions.dependencies.rome>1.0</versions.dependencies.rome>
 		<_maven_pom_package>mosaic-examples-realtime-feeds-indexer-java</_maven_pom_package>
-		<_maven_pom_classifier>cloudlet-component</_maven_pom_classifier>
+		<_maven_pom_classifier>component</_maven_pom_classifier>
 	</properties>
 	
 </project>
