Fix cloudlet example connector configurations

--- a/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
@@ -22,6 +22,6 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$L
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.ConsumerCloudlet$ConsumerCloudletContext
 cloudlet.resource_file=consumer-cloudlet.properties
 
-queue.consumer.amqp.exchange=simple-exchange
-queue.consumer.amqp.routing_key=simple-rk
-queue.consumer.amqp.queue=simple-queue
+consumer.amqp.exchange=simple-exchange
+consumer.amqp.routing_key=simple-rk
+consumer.amqp.queue=simple-queue
