--- a/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/logging-cloudlet.properties
@@ -22,13 +22,13 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$Li
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.LoggingCloudlet$LoggingCloudletContext
 cloudlet.resource_file=logging-cloudlet.properties
 
-queue.consumer.amqp.exchange=exchange-test
-queue.consumer.amqp.routing_key=rk-1
-queue.consumer.amqp.queue=logging-queue
+consumer.amqp.exchange=exchange-test
+consumer.amqp.routing_key=rk-1
+consumer.amqp.queue=logging-queue
 
-queue.publisher.amqp.exchange=exchange-test
-queue.publisher.amqp.routing_key=rk-2
-queue.publisher.amqp.queue=user-queue
+publisher.amqp.exchange=exchange-test
+publisher.amqp.routing_key=rk-2
+publisher.amqp.queue=user-queue
 
 # just some test data
 test.user=dummy
@@ -37,5 +37,5 @@ test.token=got_it
 
 # configurations below will normally not be set by the cloudlet creator
 # this is just for test
-kvstore.kvstore.connector_name=KVSTORE
-kvstore.kvstore.bucket=logging-test
+kvstore.connector_name=KVSTORE
+kvstore.bucket=logging-test
