--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -22,17 +22,17 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$LifeC
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$PongCloudletContext
 cloudlet.resource_file=pong-cloudlet.properties
 
-queue.consumer.amqp.exchange=ping-exchange
-queue.consumer.amqp.routing_key=ping
-queue.consumer.amqp.queue=ping-queue
-queue.consumer.amqp.exclusive=false
-queue.consumer.amqp.auto_ack=false
-queue.consumer.amqp.durable=false
-queue.consumer.amqp.auto_delete=true
-queue.consumer.amqp.passive=false
+consumer.amqp.exchange=ping-exchange
+consumer.amqp.routing_key=ping
+consumer.amqp.queue=ping-queue
+consumer.amqp.exclusive=false
+consumer.amqp.auto_ack=false
+consumer.amqp.durable=false
+consumer.amqp.auto_delete=true
+consumer.amqp.passive=false
 
-queue.publisher.amqp.exchange=pong-exchange
-queue.publisher.amqp.routing_key=pong
-queue.publisher.amqp.durable=false
-queue.publisher.amqp.auto_delete=true
-queue.publisher.amqp.passive=false
+publisher.amqp.exchange=pong-exchange
+publisher.amqp.routing_key=pong
+publisher.amqp.durable=false
+publisher.amqp.auto_delete=true
+publisher.amqp.passive=false
