--- a/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/publisher-cloudlet.properties
@@ -22,6 +22,6 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PublisherCloudlet$PublisherCloudletContext
 cloudlet.resource_file=publisher-cloudlet.properties
 
-queue.publisher.amqp.exchange=simple-exchange
-queue.publisher.amqp.routing_key=simple-rk
-queue.publisher.amqp.queue=simple-queue
+publisher.amqp.exchange=simple-exchange
+publisher.amqp.routing_key=simple-rk
+publisher.amqp.queue=simple-queue
