--- a/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
@@ -22,13 +22,13 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.SimpleLoggingCloud
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.SimpleLoggingCloudlet$LoggingCloudletContext
 cloudlet.resource_file=simple-logging-cloudlet.properties
 
-queue.consumer.amqp.exchange=exchange-test
-queue.consumer.amqp.routing_key=rk-1
-queue.consumer.amqp.queue=logging-queue
+consumer.amqp.exchange=exchange-test
+consumer.amqp.routing_key=rk-1
+consumer.amqp.queue=logging-queue
 
-queue.publisher.amqp.exchange=exchange-test
-queue.publisher.amqp.routing_key=rk-2
-queue.publisher.amqp.queue=user-queue
+publisher.amqp.exchange=exchange-test
+publisher.amqp.routing_key=rk-2
+publisher.amqp.queue=user-queue
 
 # just some test data
 test.user=dummy
