Upgrade Riak library to `1.0.6` / Add other missing dependencies

--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -96,6 +96,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>eu.mosaic_cloud.tools</groupId>
+			<artifactId>tools-threading</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${versions.dependencies.guava}</version>
