--- a/drivers-stubs/redis/pom.xml
+++ b/drivers-stubs/redis/pom.xml
@@ -39,6 +39,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>platform-interop</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-threading</artifactId>
 			<version>${project.version}</version>
