--- a/drivers-container/pom.xml
+++ b/drivers-container/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.drivers</groupId>
 		<artifactId>drivers-parent</artifactId>
-		<version>0.6.0_mosaic_dev-SNAPSHOT</version>
+		<version>0.6.0</version>
 		<relativePath>../drivers-parent</relativePath>
 	</parent>
 	
