--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.6.0_mosaic_dev-SNAPSHOT</version>
+	<version>0.6.0</version>
 	<packaging>pom</packaging>
 	
 	<name>mosaic-${project.artifactId}</name>
