--- a/examples/parent/pom.xml
+++ b/examples/parent/pom.xml
@@ -9,7 +9,7 @@
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
 		<version>0.7.0_mosaic_dev-SNAPSHOT</version>
-		<relativePath>../..</relativePath>
+		<relativePath>../../parent</relativePath>
 	</parent>
 	
 	<groupId>eu.mosaic_cloud.examples</groupId>
