--- a/tools-miscellaneous/pom.xml
+++ b/tools-miscellaneous/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>guava</artifactId>
 			<version>${versions.dependencies.guava}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${versions.dependencies.junit}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 </project>
