Refactor connector initialization code to allow transmitting the component connector via the environment
Currently this is a hack, and the "environment" and "configuration" classes will have to be heavily refactored.

--- a/connectors-core/pom.xml
+++ b/connectors-core/pom.xml
@@ -27,6 +27,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>eu.mosaic_cloud.components</groupId>
+			<artifactId>components-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-callbacks</artifactId>
 			<version>${project.version}</version>
