--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -54,7 +54,7 @@
 				<version>${versions.plugins.dependency}</version>
 				<executions>
 					<execution>
-						<phase>verify${_maven_pom_skip_analyze}</phase>
+						<phase>verify${_mvn_skip_analyze}</phase>
 						<goals>
 							<goal>analyze-only</goal>
 						</goals>
@@ -71,7 +71,7 @@
 				<version>${versions.plugins.source}</version>
 				<executions>
 					<execution>
-						<phase>verify${_maven_pom_skip_source}</phase>
+						<phase>verify${_mvn_skip_source}</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
@@ -84,7 +84,7 @@
 				<version>${versions.plugins.javadoc}</version>
 				<executions>
 					<execution>
-						<phase>verify${_maven_pom_skip_javadoc}</phase>
+						<phase>verify${_mvn_skip_javadoc}</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
@@ -119,7 +119,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${versions.plugins.surefire}</version>
 				<configuration>
-					<skipTests>${_maven_pom_skip_tests}</skipTests>
+					<skipTests>${_mvn_skip_tests}</skipTests>
 					<argLine>-Djava.library.path=${java.library.path}:${project.basedir}/lib</argLine>
 				</configuration>
 			</plugin>
@@ -146,7 +146,7 @@
 				<version>${versions.plugins.license}</version>
 				<executions>
 					<execution>
-						<phase>verify${_maven_pom_skip_licenses}</phase>
+						<phase>verify${_mvn_skip_licenses}</phase>
 						<goals>
 							<goal>download-licenses</goal>
 							<goal>update-project-license</goal>
@@ -167,7 +167,7 @@
 				<version>0.1</version>
 				<executions>
 					<execution>
-						<phase>verify${_maven_pom_skip_formatter}</phase>
+						<phase>verify${_mvn_skip_formatter}</phase>
 						<goals>
 							<goal>format</goal>
 						</goals>
@@ -196,18 +196,18 @@
 						<configuration>
 							<target>
 								<echo
-									message="_maven_pom_group=${project.groupId}${line.separator}"
+									message="_pom_group=${project.groupId}${line.separator}"
 									file="/dev/stdout" />
 								<echo
-									message="_maven_pom_artifact=${project.artifactId}${line.separator}"
+									message="_pom_artifact=${project.artifactId}${line.separator}"
 									file="/dev/stdout" />
-								<echo message="_maven_pom_version=${project.version}${line.separator}"
-									file="/dev/stdout" />
-								<echo
-									message="_maven_pom_classifier=${_maven_pom_classifier}${line.separator}"
+								<echo message="_pom_version=${project.version}${line.separator}"
 									file="/dev/stdout" />
 								<echo
-									message="_maven_pom_package=${_maven_pom_package}${line.separator}"
+									message="_pom_classifier=${_pom_classifier}${line.separator}"
+									file="/dev/stdout" />
+								<echo
+									message="_pom_package=${_pom_package}${line.separator}"
 									file="/dev/stdout" />
 							</target>
 						</configuration>
@@ -231,18 +231,18 @@
 								<argument>
 									if test \
 											\( ! -e '${project.build.directory}' -a -L '${project.build.directory}' \) -o \
-											\( -n '${_maven_pom_outputs}' -a ! -e '${project.build.directory}' \) -o \
-											\( -n '${_maven_pom_outputs}' -a -d '${project.build.directory}' \)
+											\( -n '${_mvn_outputs}' -a ! -e '${project.build.directory}' \) -o \
+											\( -n '${_mvn_outputs}' -a -d '${project.build.directory}' \)
 									then
 										if test -L '${project.build.directory}' ; then
 											mkdir -p -- "$( readlink -m -- '${project.build.directory}' )" || exit 1 ;
 										elif test -d '${project.build.directory}' ; then
-											mkdir -p -- '${_maven_pom_outputs}/${project.groupId}:${project.artifactId}:${project.version}' || exit 1 ;
-											mv -T -- '${project.build.directory}' '${_maven_pom_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' || exit 1 ;
-											ln -s -T -- '${_maven_pom_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' '${project.build.directory}' || exit 1 ;
+											mkdir -p -- '${_mvn_outputs}/${project.groupId}:${project.artifactId}:${project.version}' || exit 1 ;
+											mv -T -- '${project.build.directory}' '${_mvn_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' || exit 1 ;
+											ln -s -T -- '${_mvn_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' '${project.build.directory}' || exit 1 ;
 										else
-											mkdir -p -- '${_maven_pom_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' || exit 1 ;
-											ln -s -T -- '${_maven_pom_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' '${project.build.directory}' || exit 1 ;
+											mkdir -p -- '${_mvn_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' || exit 1 ;
+											ln -s -T -- '${_mvn_outputs}/${project.groupId}:${project.artifactId}:${project.version}/target' '${project.build.directory}' || exit 1 ;
 										fi ;
 									fi ;
 									exit 0 ;
@@ -376,17 +376,17 @@
 		
 		<license.licenseName>apache_v2</license.licenseName>
 		
-		<_maven_pom_skip_all />
-		<_maven_pom_skip_tests>true</_maven_pom_skip_tests>
-		<_maven_pom_skip_source>${_maven_pom_skip_all}</_maven_pom_skip_source>
-		<_maven_pom_skip_javadoc>${_maven_pom_skip_all}</_maven_pom_skip_javadoc>
-		<_maven_pom_skip_analyze>${_maven_pom_skip_all}</_maven_pom_skip_analyze>
-		<_maven_pom_skip_licenses>${_maven_pom_skip_all}</_maven_pom_skip_licenses>
-		<_maven_pom_skip_formatter>${_maven_pom_skip_all}</_maven_pom_skip_formatter>
+		<_mvn_outputs />
+		<_mvn_skip_all />
+		<_mvn_skip_tests>true</_mvn_skip_tests>
+		<_mvn_skip_source>${_mvn_skip_all}</_mvn_skip_source>
+		<_mvn_skip_javadoc>${_mvn_skip_all}</_mvn_skip_javadoc>
+		<_mvn_skip_analyze>${_mvn_skip_all}</_mvn_skip_analyze>
+		<_mvn_skip_licenses>${_mvn_skip_all}</_mvn_skip_licenses>
+		<_mvn_skip_formatter>${_mvn_skip_all}</_mvn_skip_formatter>
 		
-		<_maven_pom_package />
-		<_maven_pom_classifier />
-		<_maven_pom_outputs />
+		<_pom_package />
+		<_pom_classifier />
 		
 	</properties>
 	
