Remove build plugin versions (moved to plugin-management in the parent)

--- a/tools-zeromq/pom.xml
+++ b/tools-zeromq/pom.xml
@@ -29,8 +29,8 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>${versions.plugins.license}</version>
 				<configuration>
+					<skipUpdateProjectLicense>true</skipUpdateProjectLicense>
 					<skipUpdateLicense>true</skipUpdateLicense>
 				</configuration>
 			</plugin>
